<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity_ContestCreate">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="267dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_ubication"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_Information"
        android:layout_width="98dp"
        android:layout_height="57dp"
        android:layout_below="@+id/editText_ubication"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="273dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="158dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="110dp"
        android:text="Nombre"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="170dp"
        android:text="Fecha"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_ubication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="235dp"
        android:text="Ubicacion"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_ubication"
        android:layout_alignStart="@+id/textView_name"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="28dp"
        android:text="Informacion"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="274dp"
        android:layout_marginBottom="62dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_Information"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="-124dp"
        android:text="Concursos"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="269dp"
        android:layout_height="514dp"
        android:layout_alignStart="@+id/textView_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-9dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="45dp"
        app:srcCompat="@drawable/vvvv" />
</RelativeLayout>