<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zz"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/zz"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btnEventos"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TabWidget" />

    <Button
        android:id="@+id/btnConcursos"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="194dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TabWidget" />

    <Button
        android:id="@+id/btnActions"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="5dp"
        android:background="@android:drawable/ic_menu_sort_by_size" />

</RelativeLayout>