<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity_ContestDelete">

    <Button
        android:id="@+id/btn_deleteContest"
        android:layout_width="253dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="173dp"
        android:text="Eliminar"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="330dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="150dp"
        android:text="Nombre"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextDelete_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName" />
</RelativeLayout>