...
    android:layout_height="match_parent"
    android:background="@drawable/wwwwww"
    tools:context=".activity_actions">


    <Button
        android:id="@+id/btn_contestCreate"
        android:layout_width="195dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
...
        android:layout_marginStart="71dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="110dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/btnContestDelete"
        android:layout_width="338dp"
        android:layout_height="26dp"
        android:layout_below="@+id/btn_contestCreate"
        android:layout_alignStart="@+id/btn_ConferencesCreate"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-70dp"
...
